--- a/fuhuo987/陈俊翰.md.1.md
+++ b/fuhuo987/陈俊翰.md.1.md
@@ -538,10 +538,54 @@ flex元素也有多种属性：
 
 
 * **
- - # JavaScript
+* ## grid布局
+
+grid布局即网格布局，引入了二维网格布局系统
+
+网格是一组相交的水平线和垂直线，它定义了网格的行和列，可以把网格元素放在这些行列相关的位置上
+
+网格布局的特点有：
+
+1. **固定的位置和弹性的轨道大小**：既可以使用固定的轨道尺寸创建网格，也可以使用百分比或者```fr```来创建有弹性尺寸的网格
+2. **网格项摆放**：可以使用行号、行名或者标定一个网格区域来精确定位元素，同时还使用一种算法来控制未给出明确网格位置的元素
+3. **创建额外的轨道来包含内容**：可以通过网格布局定义显式网格。网格布局规范非常灵活，可以在需要时添加额外的行和列。包括添加“一个容器能容纳的尽可能多的列”等特性
+4. **对齐控制**：网格包含对齐特性，因此我们可以控制项目放入网格区域后的对齐方式，以及整个网格的对齐方式
+5. **控制重叠内容**：多个项目可以放置在网格单元格中，或者区域可以部分地彼此重叠。然后可以使用 ```z-index``` 属性来控制重叠区域显示的优先级
+
+通过在元素上声明```display: 	grid```来创建一个网格容器，里面的所有直系子元素都将成为网格项目
+
+使用 ```grid-template-rows```和 ```grid-template-columns```属性定义网格上的行和列。这些属性定义了网格轨道。_网格轨道_（grid track）是网格上任意两条相邻线之间的空间。
+
+轨道可以使用任何长度单位进行定义，也可以使用一个新单位```fr```来定义轨道大小，也可以混合使用单位如```grid-template-columns: 500px 1fr 2fr;```就是在可用空间扣除了500px宽度后再一分为三按比例分配
+
+包含多个轨道的大型网格可使用 ```repeat()``` 标记来重复部分或整个轨道列表，如```grid-template-columns: 1fr 1fr 1fr;```就可以写成```grid-template-columns: repeat(3,1fr);```。同时```repeat()```也可以重复轨道列表中的一部分。如果是```repeat(5,1fr,2fr)```就意味着网格有十个轨道，为1个```1fr```后面跟着一个```5fr```，这样重复五次
+
+如果希望行或列的大小永远不会小于一个值时，可以使用```minmax()```函数，如 ``` grid-auto-rows: minmax(100px, auto);```就意味着行高度最小为100px，最大为auto，使用 auto 表示大小将取决于内容的大小，并将拉伸以在该行中为单元格中最高的项目留出空间。
+
+在定义网格时，定义的是网格轨道而非网格线，一个三行两列的网格中有四条纵向的网格线，网格线的编号顺序取决于文章的书写格式，网格线也可以被命名
+
+使用 ```grid-column-start```、```grid-column-end```、```grid-row-start``` 和 ```grid-row-end``` 属性可以将项目放到自己想要的位置，也可以跨轨道放置，注意目标是网格线而不是网格轨道。这个有简写，如：```grid-column```和```grid-row```，值为 ```值1/值2```，值1为起始网格线，值2为终止网格线，也可以更进一步，合并为```grid-area```属性，同样用```/```分开，值的顺序为```grid-row-start```/```grid-column-start```/```grid-row-end```/```grid-column-end```
+
+项目可以按行或者列跨越一个或多个单元格，形成了一个*网格区域*，网格区域必须是矩形的
+
+网格单元格之间的横向间距或纵向间距可以使用```column-gap```和```row-gap```属性（简写为```gap```）
+
+网格间距使用的任何空间都会在分配给灵活长度的 ```fr``` 轨道之前计算在内，而且网格间距的大小与常规网格轨道相同，但不能在间距中放置任何东西。就基于行的定位而言，网格间距就像一条粗线。
+
+网格也可以嵌套，将一个网格项作为一个网格容器，如果不使用子网格的嵌套，那么嵌套网格和父网格没有任何关系，不会继承父网格的属性
+
+*子网格*(subgrid)能让在创建嵌套网格的同时使用父网格的轨道定义，如将 ```grid-template-columns: repeat(3,1fr)```的轨道定义更改为 ```grid-template-columns: subgrid```。嵌套网格就会沿用父网格轨道来布局项目。
+
+网格项可以占据同一单元格，可以使用```z-index```属性改变堆叠顺序（这里好像和绝对定位挺像的），就是当一个单元格被两个网格区域覆盖时就可以改变```z-index```的值决定谁在上面
+
+在抉择布局方式时，应该思考是**只需要按行或者列布局**还是要**同时按行和列布局**，以此决定使用弹性盒子布局还是网格布局
+
+css的网格布局是一种很好用的工具，应该大胆尝试与其他布局方法混用，获得想要的页面效果
+* **
+ * # JavaScript
 这里是内容，待补充
- - **
- - # 代码部分
+ * **
+ * # 代码部分
 
 后面的想法就是做个导航栏还有下面色彩选择的部分希望能选择一个色彩展示人物相关信息
 看考核要求最后说不定还能加个问卷？
