1/25 css嵌套和At规则更新版

--- a/fuhuo987/陈俊翰.md.1.md
+++ b/fuhuo987/陈俊翰.md.1.md
@@ -457,6 +457,221 @@ css字体属性定义字体、颜色、大小、加粗、文字样式
 |normal|默认，向前播放|
 |alternate|偶数次向前播放，奇数次反向播放|
 * **
+* ## css嵌套
+
+css嵌套使样式表更加容易阅读、模块化，同时也更容易维护，因为不需要重复选择器，文件同样可以被压缩
+
+1.**子选择器**
+可以使用css嵌套来创建一个父级的子选择器，这可以用来选择特定父元素的子元素，使用```&```来实现
+
+有几个特定环境可以使得`` `&``` 嵌套选择器变得很必要或者有用：
+
+-   在连接选择器时，如组合选择器或伪类
+-   为了向后兼容。
+-   作为一个辅助阅读的标志。当你看到 ```&``` 时，你就知道这里用到 CSS 嵌套了。
+```
+/* 不使用嵌套选择器 */
+parent {
+  /* 父样式 */
+  child {
+    /* 父级的子样式 */
+  }
+}
+
+/* 使用嵌套选择器 */
+parent {
+  /* 父样式 */
+  & child {
+    /* 父级的子样式 */
+  }
+}
+
+/* 浏览器均会把以上两个样式表解析为 */
+parent {
+  /* 父样式 */
+}
+parent child {
+  /* 父级的子样式 */
+}
+```
+2.**关系选择器**
+css关系选择器也可在使用或不使用```&```嵌套选择器的情况下使用
+
+```
+h2 {
+  color: tomato;
+  + p {
+    color: white;
+    background-color: black;
+  }
+}
+```
+如果使用```&```嵌套选择器，只需在```+```前面加个```&```即可
+
+3.**组合选择器**
+与关系选择器不同，在使用组合选择器时，必须使用```&```嵌套选择器，这是因为浏览器会自动在不使用```&```嵌套选择器的选择器之间添加空格
+```
+.a {
+  /* 带有 class="a" 元素的样式 */
+  .b {
+    /* 带有 class="b"，且为 class="a" 元素的子元素的样式 */
+  }
+  &.b {
+    /* 带有 class="a b" 元素的样式 */
+  }
+}
+
+/* 浏览器会将其分析为 */
+.a {
+  /* 带有 class="a" 元素的样式 */
+}
+.a .b {
+  /* 带有 class="b"，且为 class="a" 元素的子元素的样式 */
+}
+.a.b {
+  /* 带有 class="a b" 元素的样式 */
+}
+```
+
+4.**后附嵌套选择器**
+```&```嵌套选择器可以放到一个选择器的后方，这样可以反转上下文
+```
+.foo {
+  /* .foo 的样式 */
+  .bar & {
+    /* .bar .foo 的样式 */
+  }
+}
+```
+<br>
+
+如果一个嵌套 CSS 规则无效，那么所有其包含的样式都将被忽略。这不影响其父级及其后面的规则。
+
+使用css嵌套可以将包含任何样式的at规则嵌入到另一个规则中。嵌套在at规则从距离它们最近的祖先规则中获得选择器定义
+
+可以被嵌套的at规则有：
+
+1. ```@media```
+2. ```@support```
+3. ```@layer```
+4. ```@scope```
+5. ```@container```
+
+以```@media```为例，使用at规则嵌套的css为：
+```
+.foo {
+  display: grid;
+  @media (orientation: landscape) {
+    grid-auto-flow: column;
+  }
+}
+```
+此时浏览器解析嵌套块是这样的：
+```
+.foo {
+  display: grid;
+  @media (orientation: landscape) {
+    & {
+      grid-auto-flow: column;
+    }
+  }
+}
+```
+如果不使用at嵌套，那么它的等价表示是：
+```
+.foo {
+  display: grid;
+}
+
+@media (orientation: landscape) {
+  .foo {
+    grid-auto-flow: column;
+  }
+}
+```
+
+at规则也可以嵌套其他at规则，如：
+```
+.foo {
+  display: grid;
+  @media (orientation: landscape) {
+    grid-auto-flow: column;
+    @media (min-width: 1024px) {
+      max-inline-size: 1024px;
+    }
+  }
+}
+```
+如果不使用嵌套的方法，它的等价表示是这样：
+```
+.foo {
+  display: grid;
+}
+@media (orientation: landscape) {
+  .foo {
+    grid-auto-flow: column;
+  }
+}
+@media (orientation: landscape) and (min-width: 1024px) {
+  .foo {
+    max-inline-size: 1024px;
+  }
+}
+```
+<br>
+
+**嵌套的优先级**
+```&```嵌套选择器的优先级由它所关联的选择器列表中优先级最高的选择器决定
+```
+<b class="foo">
+  <c>蓝色文字</c>
+</b>
+```
+```
+#a, b {
+  & c {
+    color: blue;
+  }
+}
+
+.foo c {
+  color: red;
+}
+```
+在这个示例中，ID 选择器（```#a```）的优先级是 ```1-0-0```，而类型选择器（```b```）的优先级是 ```0-0-1```。```&``` 嵌套选择器有 ```1-0-0``` 的优先级，尽管 ID 选择器 ```#a``` 从未使用。
+
+类选择器 ```.foo``` 的优先级是 ```0-1-0```。经过计算得出，```& c``` 的总优先级是 ```1-0-1```，而 ```.foo c``` 的优先级是 ```0-1-1```，意味着 ```color: blue;``` 是最后赢家
+
+在使用嵌套选择器的时候要注意优先级问题
+*  **
+* ## At规则
+由于上文提到了at规则，于是在这里再做一下笔记
+
+at规则是一个css语句，用来指示css如何运行，以```@```开头后跟一个标识符，并包括直到下一个分号的所有内容，或下一个 CSS 块，以先到者为准
+
+下面是一些不同的at规则：
+| 名称 |描述 |
+|--|--|
+|@charset | 定义样式表使用的字符集|
+| @import |告诉 CSS 引擎引入一个外部样式表 |
+| @namespace | 告诉 CSS 引擎必须考虑 XML 命名空间 |
+<br>
+
+嵌套 at 规则，是嵌套语句的子集，不仅可以作为样式表里的一个语句，也可以用在条件规则组里：
+| 名称 |描述  |
+|--|--|
+| @media |如果满足媒介查询的条件则条件规则组里的规则生效  |
+|@supports  | 如果满足给定条件则条件规则组里的规则生效 |
+|@document  |如果文档样式表满足给定条件则条件规则组里的规则生效  |
+| @page | 描述打印文档时布局的变化 |
+| @font-face | 描述将下载的外部的字体 |
+| @keyframes | 描述 CSS 动画的中间步骤 |
+| @layer| 声明一个级联层，并在有多个级联层时定义优先顺序。|
+<br>
+
+**条件规则组**
+每条at规则都有不同的语法，但一些at规则可以被归为一个特殊的分类：条件规则组。它们都使用相同的语法，它们都表达：它们所指的条件 (类型不同) 总等效于 **true** 或者 **false**，如果为 **true** 那么它们之中的语句生效。如```@media```、```@supports```、```@document```
+* **
 * ## 媒体查询
 
 媒体查询可以使页面在不同终端下显示不同效果，会根据设备的大小自动识别加载不同的样式
