1/27 图解HTTP第一章笔记更新版

--- a/fuhuo987/陈俊翰.md.1.md
+++ b/fuhuo987/陈俊翰.md.1.md
@@ -951,6 +951,95 @@ while(条件){要循环的语句}
 
 ```continue```语句意味着立刻终止本轮循环，返回循环体的头部，开始下一轮循环
  *   **
+ * # 图解HTTP笔记
+ * ## 第一章 了解Web及网络基础
+
+Web使用一种名为HTTP(HyperText Transfer Protocol，超文本传输协议)的协议作为规范，完成从客户端到服务器端灯一系列运作流程，可以说，Web是建立在HTTP协议上通信的
+
+CERN（欧洲核子研究组织）的蒂姆·伯纳斯-李博士提出了一种能让远隔两地的研究者们共享知识的设想
+
+现在已经提出了三项WWW（World Wide Web，万维网）构建技术，分别是：
+1. **HTML**（HyperText Markup Language，超文本标记语言），它的页面文本标记语言为SGML（Standard Generalized Markup Language，标准通用标记语言）
+2. **HTTP**，作为文档传递协议
+3. **URL**（Uniform Resource Locator，统一资源定位符）
+<br>
+
+CERN成功研发了世界上第一台Web服务器和Web浏览器
+
+HTTP于1990年问世，但没有作为正式的标准被建立，被称为HTTP/0.9。HTTP正式作为标准被公布是在1996年五月，被命名为HTTP/1.0，该协议标准至今仍被广泛用于服务器端。1997年一月公布的HTTP/1.1是目前主流的HTTP协议版本，当初的标准是RFC0，之后的修订版RFC2616就是当前的最新版。
+
+当年HTTP协议主要是为了解决文本传输的难题，但现在已经超出了Web框架的局限
+
+通常使用的网络是在**TCP/IP**协议族的基础上运作的，HTTP是它内部的一个子集
+
+计算机与网络设备要互相通信就必须基于相同的方法，我们把这个规则称为**协议**，而TCP/IP就是互联网相关各类协议族的总称（也有说法是TCP协议和IP协议，或者是IP协议通信过程中使用到的协议族的统称）
+
+TCP/IP协议很重要的一点就是分层，其按层次分分为**应用层、传输层、网络层、数据链路层**，分层使各个层次内部的设计可以自由改动，简化设计。各层的作用如下：
+|层|作用  |
+|--|--|
+| **应用层** |决定了向用户提供应用服务时通信的活动，HTTP协议也属于该层  |
+| **传输层** | 对上层应用层提供处于网络连接中的两台计算机之间的数据储传输，有TCP（Transmission Control Protocol，传输控制协议）和UDP（User Data Protocol， 用户数据报协议） |
+| **网络层（网络互连层）** |处理网络上流动的数据包，规定通过怎样的路径（传输路线）到达对方计算机传送数据包  |
+| **链路层** |处理连接网络的硬件部分，硬件上的范畴均在链路层的作用范围里  |
+<br>
+
+在利用TCP/IP协议族进行网络通信时，会通过分层顺序与对方进行通信，发送端从应用层向下走，接收端从链路层向上走
+
+发送端在层与层之间传输数据时，每经过一层必定会打上该层所属的首部信息，而接收端则在层与层传输时消去对应的首部
+|XX层->XX层| 首部|
+|--|--|
+| **应用层->传输层** | TCP首部 |
+| **传输层->网络层** | IP数据包（IP首部） |
+|  **网络层->链路层** | 网络架构（以太网首部） |
+这种把数据信息像快递一样层层包装起来的做法叫做封装
+
+TCP/IP协议中与HTTP协议密不可分的有三个协议：
+
+1. **IP协议**
+IP（Internet Protocol）协议负责传输，属于网络层，几乎所有使用网络的系统都会用到这个协议。IP 协议的作用是把各种数据包传送给对方。要保证确实传送到对方那里要满足各种条件，最重要的是IP 地址和 MAC地址（Media Access Control Address）<br><br>IP 地址（可以更改）指明了节点被分配到的地址， MAC 地址（基本上不会更改）是指网卡所属的固定地址。<br><br>IP间的通信依赖MAC地址，因为通信通常是要经过多台计算机和网络设备中转，中转时就要利用下一个设备的MAc地址来搜索，这时会采用ARP协议（Address Resolution Protocol，是一种用以解析地址的协议， 根据通信方的 IP 地址就可以反查出对应的 MAC 地址）<br><br>在到达通信目标前，中转计算机和路由器只能获得很粗略的传输路线，这种机制成为路由（routing），无论哪台计算机、网络设备都无法全面掌握互联网的细节
+2. **TCP协议**
+TCP协议用于确保可靠性，属于传输层，提供可靠的字节流服务<br><br>字节流服务指的是为了方便传输将大块数据分割成以报文段为单位的数据包进行管理。TCP协议为了更容易传送大数据才将数据分割，而且能够确认数据最终是否送达到对方<br><br>为了准确送达，TCP协议采用了三次握手策略，在用TCP协议将数据包送出去后，TCP一定会向对方确认是否成功送达，握手过程中使用TCP的标志（flag）——**SYN**（synchronize）和**ACK**（acknowledgement）<br><br>首先，发送端会发送带SYN标志的数据包给对方，接收端收到后，回传一个带有SYN/ACK标志的数据包表示确认，此时发送端会回传一个带ACK标志的数据包，代表“握手”的结束。如果握手过程突然中断，TCP协议会再以相同的顺序发送数据包。<br><br>（除了上述三次握手， TCP 协议还有其他各种手段来保证通信的可靠性）
+3. **DNS协议**
+DNS（Domain Name System）协议负责域名解析，属于应用层，提供域名到IP地址间的解析服务<br><br>计算机可以被赋予IP地址、主机名、域名，用户通常使用主机名和域名来访问对方的计算机（因为IP地址是一组纯数字），但是计算机比起处理名称更擅长处理一长串数字，由此，DNS服务诞生了，它提供提供域名查找IP地址，或通过IP地址逆向搜索域名的服务<br><br>发送端想访问一个域名，DNS协议会查找到这个域名对应的IP地址，然后发送端会向这个IP地址发送访问请求
+
+如果要把通信过程中各个协议的作用表述出来，大概就像这样：
+发送端想访问一个域名
+**DNS协议**会查找到这个域名对应的IP地址。
+**HTTP协议**会生成针对目标Web服务器的HTTP请求报文。
+**TCP协议**将请求报文分割成多段，按序号分层多个报文段然后将每个报文段可靠地传给对方。
+**IP**协议搜索对方的地址，一边中转一边传输。
+接收端的**TCP协议**按序号重组报文段。
+接收端的**HTTP协议**处理对Web服务器请求的内容。
+请求的处理内容同样利用TCP/IP通信协议进行回传
+
+与 URI（统一资源标识符）相比，我们更熟悉 URL（Uniform Resource Locator，统一资源定位符）。URL正是使用 Web 浏览器等访问 Web 页面时需要输入的网页地址。
+
+URI 是 Uniform Resource Identifier 的缩写
+**Uniform：**规定统一的格式，方便处理多种不同类型的资源，不需要根据上下文环境来识别资源指定的访问方式，加入新的协议方案也更容易
+**Resource：**资源的定义是“可标识的任何东西”。资源不仅可以是单一的， 也可以是多数的集合体
+**Identifier：**表示可标识的对象。 也称为标识符
+
+URI 就是由某个协议方案表示的资源的定位标识符，协议方案是指访问资源所使用的协议类型名称，比如采用HTTP协议时，协议方案就是http
+
+URI 用字符串标识某一互联网资源，而 URL表示资源的地点（互联网上所处的位置） 。可见 URL是 URI 的子集
+
+表示指定的URI，可以使用**绝对URI、绝对URL、相对URL**，相对URL指的是从浏览器中基本URI处指定的URL，如 /image/logo.gif
+
+**绝对URI**组成如下：
+|名称|描述  |
+|--|--|
+| **协议方案名** |使用http:或 https:等协议方案名获取访问资源时要指定协议类型。不区分字母大小写，最后附一个冒号（:）|
+|**登录信息**  | （可选），指定用户名和密码作为从服务器端获取资源时必要的登录信息 |
+| **服务器地址** | 使用绝对URI必须指定待访问的服务器地址。地址可以是类似hackr.jp这种DNS可解析的名称，或是192.168.1.1这类IPv4地址名，还可以是[0:0:0:0:0:0:0:1]这样用方括号括起来的IPv6地址名 |
+| **服务器端口号** | （可选）指定服务器连接的网络端口号。若用户省略则自动使用默认端口号 |
+| **带层次的文件路径** | 指定服务器上的文件路径来定位特指的资源 |
+|**查询字符串**  | （可选）针对已指定的文件路径内的资源，可以使用查询字符串传入任意参数 |
+| **片段标识符组成** |（可选）使用片段标识符通常可标记出已获取资源中的子资源  |
+<br>
+
+有一些用来制定 HTTP 协议技术标准的文档,它们被称为RFC（Request for Comments, 征求修正意见书）,不遵照 RFC 标准实现就无法进行 HTTP 协议通信
+
+ * **
  * # 代码部分
 
 后面的想法就是做个导航栏还有下面色彩选择的部分希望能选择一个色彩展示人物相关信息
@@ -967,8 +1056,7 @@ while(条件){要循环的语句}
 
 <meta charset="UTF-8">
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<meta name="viewport" content="width=device-width, 3initial-scale=1.0">
 <title>fuhuo</title>
 
 <link rel="stylesheet" href="./css/style.css">
