1/27 之前的代码里多打了一个3

--- a/fuhuo987/陈俊翰.md.1.md
+++ b/fuhuo987/陈俊翰.md.1.md
@@ -1056,7 +1056,7 @@ URI 用字符串标识某一互联网资源，而 URL表示资源的地点（互
 
 <meta charset="UTF-8">
 
-<meta name="viewport" content="width=device-width, 3initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>fuhuo</title>
 
 <link rel="stylesheet" href="./css/style.css">
