1/28除夕快乐 图解HTTP第二、三章笔记更新版

--- a/fuhuo987/陈俊翰.md.1.md
+++ b/fuhuo987/陈俊翰.md.1.md
@@ -1039,6 +1039,157 @@ URI 用字符串标识某一互联网资源，而 URL表示资源的地点（互
 
 有一些用来制定 HTTP 协议技术标准的文档,它们被称为RFC（Request for Comments, 征求修正意见书）,不遵照 RFC 标准实现就无法进行 HTTP 协议通信
 
+* **
+* ##第二章 简单的HTTP协议
+
+应用HTTP协议时，一端担任客户端角色，一端担任服务器端角色，请求访问资源的是客户端，提供资源响应的是服务器端，角色有可能互换，但HTTP协议能明确区分哪个是客户端哪个是服务器端
+
+HTTP协议规定请求从客户端发出，服务器端响应请求并返回
+
+这个是从客户端发出的请求报文的内容：
+```
+GET/index.htm HTTP/1.1
+Host:hackr.jp
+```
+开头的```GET```表示请求访问服务器的类型，称为方法
+字符串```/index.htm```指明了请求访问的资源对象，也叫做请求URI
+最后的HTTP/1.1是HTTP的版本号
+请求报文是由请求方法、请求 URI、协议版本、可选的请求首部字段和内容实体构成的
+
+收到请求的服务器会将请求内容的处理结果以响应的形式返回
+```
+HTTP/1.1 200 OK
+Date: Tue, 10 Jul 2012 06:50:15 GMT Content-Length: 362
+Content-Type: text/html
+<html>
+……
+```
+开头的```HTTP/1.1```表示服务器对应的HTTP版本
+```200 OK```表示请求处理结果的状态码和原因短语。
+下一行显示了创建响应的日期时间，是首部字段内的一个属性
+空一行
+后面是资源实体的主体
+
+响应报文基本上由协议版本、状态码（表示请求成功或失败的数字代码） 、用以解释状态码的原因短语、可选的响应首部字段以及实体主体构成
+
+HTTP是无状态协议，意味着它不保存状态，在HTTP这个级别，协议对于发送过的请求或响应都不做持久化处理。这个是为了更快地处理大量事务，确保协议的可伸缩性
+
+但随着发展，有些情况网站需要保存用户的状态，于是引入了Cookie技术，这样就可以管理状态了
+
+由于URI的存在，使HTTP协议能定位互联网上的资源从而进行访问
+
+当客户端请求访问资源而发送请求时，URI 需要将作为请求报文中的请求 URI 包含在内。如果不是访问特定资源而是对服务器本身发起请求，可以用一个 * 来代替请求 URI，如：
+```
+OPTIONS * HTTP/1.1
+```
+<br>
+
+方法的作用在于可以指定请求的资源按期望产生某种行为，HTTP/1.1中可使用的方法（method）：
+1. **GET：获取资源**
+GET用来<u>请求访问已被URI识别的资源</u>。指定的资源经服务器端解析后返回响应内容
+2. **POST：传输实体主体**
+虽然GET方法也可以传输实体的主体，但一般不用GET方法而是使用POST方法，虽然相似，<u>但POST方法的主要目的斌不是回去响应的主体内容</u>
+3. **PUT：传输文件**
+PUT方法用来传输文件，要求<u>在请求的报文的主体中包含文件内容，然后保存到请求URI指定的位置</u>。但是HTTP/1.1的PUT方法自身不带验证机制，任何人都可以上传文件，一般的Web网站不使用该方法。若配合 Web 应用程序的验证机制，或架构设计采用REST（REpresentational State Transfer，表征状态转移）标准的同类Web 网站，就可能会开放使用 PUT 方法。
+4. **HEAD：获取报文首部**
+该方法和GET方法一样，只是<u>不返回报文主体部分</u>，用来确认URI的有效性和资源更新的日期时间等
+5. **DELETE：删除文件**
+是和PUT相反的方法，按请求URI删除指定的资源。但它也和PUT一样没有验证机制，一般Web网站不使用
+6. **OPTIONS：询问支持的方法**
+用来查询针对请求URI指定的资源支持的方法
+7. **TRACE：追踪路径**
+该方法是让Web服务器将之前的请求通信环回给客户端的方法<br><br>发送请求时，在 Max-Forwards 首部字段中填入数值，每经过一个服务器端就将该数字减 1，当数值刚好减到 0 时，就停止继续传输，最后接收到请求的服务器端则返回状态码 200 OK 的响应。<br><br>客户端用TRACE方法可以查询发出去的请求是怎么样被加工修改的，确认连接过程中发生的一系列操作<br><br>但是TRACE方法本来就不常用，还容易引发XST（Corss-Site Tracing，跨站追踪）攻击
+8. **CONNECT：要求用隧道协议连接代理**
+该方法要求在与代理服务器通信时建立隧道，实现用隧道协议进行TCP通信。主要使用SSL（Secure Sockets Layer，安全套接层）和TLS（Transport Layer Security， 传输层安全）协议把通信内容加密后经网络隧道传输
+
+向请求URI指定的资源发送请求报文时，采用称为方法的命令
+
+除了以上方法，HTTP/1.0还有LINK（建立和资源之间的联系）和UNLINK（断开连接关系）方法，但已被HTTP/1.1废弃
+
+在HTTP的初始版本中，每进行一次HTTP通信都要断开一次TCP连接，每次请求都会造成无谓的TCP连接建立和断开，增加通信量的开销
+
+为了解决这个问题，HTTP/1.1和一部分的HTTP/1.0推出了**持久连接**的方法，只要任意一端没有明确提出断开连接就保持TCP连接状态。这种方法减少了TCP连接的重复建立和断开所造成的额外开销，减轻了服务器端的负载。在HTTP/1.1中，所有连接默认都是持久连接
+
+持久连接使**管线化**成为可能，<u>不需要等待上一个请求得到响应就可以之间发送下一个请求</u>,速度更快
+
+在上面的笔记中有提到Cookie技术的引入使Web可以进行状态的管理
+
+**Cookie技术**通过在请求和响应报文中写入Cookie信息来控制客户端的状态。如果客户端的请求报文中没有Cookie的相关信息，服务器端发送的响应报文中会有一个叫Set-Cookie的首部字段信息通知客户端保存Cookie。客户端以后的请求中会自动在请求报文中加入Cookie值后发送。服务器端在发现客户端发来的Cookie后回去检查时哪个客户端发来的请求，对比服务器上的记录，得到之前的状态信息
+
+ * **
+ * ## 第三章 HTTP报文内的HTTP信息
+ 
+用于HTTP协议交互的信息被称为HTTP报文，请求端的叫**请求报文**，响应端的叫**响应报文**。HTTP报文本身是由多行数据（CR+LF作换行符）数据构成的字符串文本
+
+HTTP报文大致分为报文首部和报文主体，由空行划分，并不一定要有报文主体
+
+请求报文和响应报文首部的结构：
+|请求报文| 响应报文 |
+|--|--|
+|请求行  | 状态行 |
+| 请求首部字段 | 响应首部字段 |
+| 通用首部字段 | 通用首部字段 |
+| 实体首部字段 | 实体首部字段 |
+| 其他 | 其他 |
+<br>
+
+**请求行**
+包含请求的方法，请求URI和HTTP版本
+**状态行**
+包含表明响应结果的状态码，原因短语和HTTP版本
+**首部字段**
+一般有四种首部，分别是**通用首部、请求首部、响应首部和实体首部**（可能还有Cookie等）
+
+通过在传输时编码，能有效处理大量访问请求。编码操作需要计算机完成，会消耗更多CPU资源
+
+**报文**是HTTP通信的基本单位，由8位组字节流组成，通过HTTP通信传输
+**实体**是作为请求或响应的有效载荷数据（补充项）被传输，其内容由实体首部和实体主体组成
+
+HTTP 报文的主体用于传输请求或响应的实体主体，通常报文主体等于实体主体，但当传输中进行编码操作时实体主体内容发生变化，于是产生了差异
+
+HTTP协议中有一种被称为**内容编码**的功能，内容编码指明应用在实体内容上的编码格式，并保持实体信息原样压缩，内容编码后的实体由客户端接收并负责解码
+
+常用的内容编码有以下几种：
+1. gzip（GNU zip）
+2. compress（UNIX 系统的标准压缩）
+3. deflate（zlib） 
+4. identity（不进行编码）
+
+如果请求段编码实体资源尚未全部传输完成，浏览器无法显示请求页面，所以在传输大容量数据时，通过把数据分割成多块**分割物（chunk）**，能够让浏览器逐步显示页面，这种功能称为**分块传输编码**
+
+每一块分割块都会用十六进制来标记大小，实体主体的最后一块会使用“0（CR+LF）”来标记，使用分块传输编码的实体主体会由接收的客户端负责解码，恢复到解码前的实体主体
+
+HTTP 协议中采纳了多部分对象集合，发送的一份报文主体内可含有多类型实体。通常是在图片或文本文件等上传时使用
+
+多部分对象集合包含的对象如下：
+1. **multipart/form-data**
+在Web表单文件上传时使用
+2. multipart/byteranges
+状态码 206（Partial Content，部分内容）响应报文包含了多个范围的内容时使用
+
+在 HTTP 报文中使用多部分对象集合时，需要在首部字段里加上Content-type
+
+boundary字符串用来划分多部分对象集合指明的各类实体。在其指定的各个实体的起始行前插入“--”标记，在多部分对象集合对应的字符串的最后插入“--”标记作为结束
+
+如果下载时网络中断，那么就不得不再次从头下载，这个问题想要得到解决需要指定下载的实体范围。指定范围发送的请求叫做**范围请求**
+
+执行范围请求时，会用到首部字段Range来指定资源的byte范围
+
+```Range：bytes=5000-10000```就是指定了5000~10000字节，也可以有```Range：bytes=5000-10000，12000-15000```的双重范围
+
+针对范围请求，响应会返回状态码为206 Partial Content的响应报文。如果是多重范围，那么响应会在首部字段ContentType标明multipart/byteranges后返回响应报文
+
+（如果服务器端没办法响应范围请求，那么就会返回状态码200 OK和完整的实体内容）
+
+**内容协商**机制是指客户端和服务器端就响应的资源内容进行交涉，然后提供给客户端最为适合的资源，包含在请求报文中的某些首部字段会作为判断是否是最合适资源的基准，如：**Accept、Accept-Charset、Accept-Encoding、Accept-Language、Content-Language**
+
+内容协商技术有三种类型：
+|类型| 描述 |
+|--|--|
+| **服务器驱动协商** | 由服务器端进行内容协商，以请求的首部字段进行参考，但对用户来说不一定是最合适的 |
+| **客户端驱动协商** | 由客户端进行内容协商，就类似于手动选择浏览器语言。存在需要第二次请求而获得最好表现形式的缺点。第二次请求只有当缓存被使用时才是有效率的 |
+| **透明协商** | 服务器驱动和客户端驱动的结合体，两端各自进行内容协商。结合了服务器和客户端的协商能力，能够更好地满足不同用户的需求。通过缓存利用代理驱动协商的信息，减少了服务器的负担，提高了响应速度。提供最适合用户的资源，提升用户体验‌ |
+
  * **
  * # 代码部分
 
