1/28除夕快乐 图解HTTP第四章笔记更新版

--- a/fuhuo987/陈俊翰.md.1.md
+++ b/fuhuo987/陈俊翰.md.1.md
@@ -1164,7 +1164,7 @@ HTTP 协议中采纳了多部分对象集合，发送的一份报文主体内可
 多部分对象集合包含的对象如下：
 1. **multipart/form-data**
 在Web表单文件上传时使用
-2. multipart/byteranges
+2. **multipart/byteranges**
 状态码 206（Partial Content，部分内容）响应报文包含了多个范围的内容时使用
 
 在 HTTP 报文中使用多部分对象集合时，需要在首部字段里加上Content-type
@@ -1181,7 +1181,7 @@ boundary字符串用来划分多部分对象集合指明的各类实体。在其
 
 （如果服务器端没办法响应范围请求，那么就会返回状态码200 OK和完整的实体内容）
 
-**内容协商**机制是指客户端和服务器端就响应的资源内容进行交涉，然后提供给客户端最为适合的资源，包含在请求报文中的某些首部字段会作为判断是否是最合适资源的基准，如：**Accept、Accept-Charset、Accept-Encoding、Accept-Language、Content-Language**
+**内容协商**机制是指客户端和服务器端就响应的资源内容进行交涉，然后提供给客户端最为适合的资源，包含在请求报文中的某 些首部字段会作为判断是否是最合适资源的基准，如：**Accept、Accept-Charset、Accept-Encoding、Accept-Language、Content-Language**
 
 内容协商技术有三种类型：
 |类型| 描述 |
@@ -1189,7 +1189,45 @@ boundary字符串用来划分多部分对象集合指明的各类实体。在其
 | **服务器驱动协商** | 由服务器端进行内容协商，以请求的首部字段进行参考，但对用户来说不一定是最合适的 |
 | **客户端驱动协商** | 由客户端进行内容协商，就类似于手动选择浏览器语言。存在需要第二次请求而获得最好表现形式的缺点。第二次请求只有当缓存被使用时才是有效率的 |
 | **透明协商** | 服务器驱动和客户端驱动的结合体，两端各自进行内容协商。结合了服务器和客户端的协商能力，能够更好地满足不同用户的需求。通过缓存利用代理驱动协商的信息，减少了服务器的负担，提高了响应速度。提供最适合用户的资源，提升用户体验‌ |
+* **
+* ## 第四章 返回结果的HTTP状态码
+HTTP状态码负责表示客户端HTTP请求的返回结果、标记服务器端的处理是否正常、通知出现的错误等工作。用户根据状态码，可以知道服务器端是正常处理了请求，还是出现了错误
 
+|  | 类别 | 原因短语 | 
+|--|--|--|
+| **1XX** | Informational（信息性） | 接收的请求正在处理 |
+| **2XX** | Success（成功状态码） | 请求正常处理完毕 |
+| **3XX** | Redirection（重定向状态码） | 需要进行附加操作以完成请求 |
+| **4XX** | Client Error（客户端错误状态码） | 服务器无法处理请求 |
+| **5XX** | Server Error（服务器错误状态码） | 服务器处理请求出错 |
+
+经常使用的状态码共有14种：
+
+* **2XX类**
+   1. **200 OK**：表示客户端发来的请求在服务器端被正常处理了
+   2. **204 No Content**：服务器接收的请求已成功处理，但在返回的响应报文中不含实体的主体部分
+   3. **206 Partial Content**：表示客户端进行了范围请求，服务器成功执行了这部分的GET请求，响应报文中包含由 Content-Range 指定范围的实体内容
+   
+* **3XX类**
+    4. **301 Moved Permanently**：永久性重定向，表示请求的资源已经被分配了新的URI，以后应该使用资源现在所指的URI
+    5. **302 Found**：临时性重定向，该状态码表示请求的资源已经被分配了新的URI，希望用户（本次）能使用新的URi访问。虽然与301 Moved Permanently类似，但该状态码代表的资源不是永久移动，而是临时性的，未来URI可能还会改变
+    6. **303 See Other**：表示由于请求对应的资源 存在另一个URI，应该使用GET方法定向获取请求的资源。与302 Found相似，但明确要求客户端用GET方法获取资源  
+ 
+ 
+    当301、302、303响应状态码返回时，几乎所有的浏览器都会把POST 改成 GET，并删除请求报文内的主体，之后请求会自动再次发送。<br><br>（301、302 标准是禁止将 POST 方法改变成 GET 方法的，但实际使用时大家都会这么做）（草）
+    7. **304 Not Modified**：表示客户端发送附带条件的请求时，服务器端允许请求访问资源，但未满足条件的情况。虽然该状态码为3XX，但和重定向没有关系
+    8. **307 Temporary Redirect**：临时重定向，与302 Found有相同含义，尽管302标准禁止POST变换成GET，但大家都不遵守。307不会从POST变GET
+* **4XX类**
+    9. **400 Bad Request**：表示请求报文中存在语法错误，浏览器会像200 OK一样对该状态码
+    10. **401 Unauthorized**：该状态码表示发送的请求需要有通过HTTP认证（BASIC认证、DIGEST认证）的认证信息，若之前已经进行过一次请求，则表示用户认证失败<br><br>返回含有401的响应必须包含一个适用于被请求资源的WWW-Authenticate首部用来质询（challenge）用户信息，浏览器第一次接收到401响应的时候会弹出认证用对话窗口 
+    11. **403 Forbidden**对请求资源的访问被服务器拒绝，服务器端没有必要给出拒绝的理由，但可以在实体的主体部分对原因进行描述让用户明白
+    12. **404 Not Found**：服务器上无法找到请求的资源，也可以在服务器端拒绝请求不想说明理由时使用
+ * **5XX类**
+    13. **500 Internal Server Error**：服务器端在执行请求时发生了错误
+    14. **503 Service Unavailable**：服务器正在进行停机维护或暂时处于超负载状态，无法处理请求。如果事先得知解除以上状况需要的时间，最好写入RetryAfter首部字段再返回给客户端
+ <br>
+ 
+（不少返回的状态码响应都是错误的，但是用户可能察觉不到这点。比如 Web 应用程序内部发生错误，状态码依然返回 200 OK，这种情况也经常遇到)
  * **
  * # 代码部分
 
