1/29春节快乐 图解HTTP第五章笔记更新版

--- a/fuhuo987/陈俊翰.md.1.md
+++ b/fuhuo987/陈俊翰.md.1.md
@@ -1229,6 +1229,41 @@ HTTP状态码负责表示客户端HTTP请求的返回结果、标记服务器端
  
 （不少返回的状态码响应都是错误的，但是用户可能察觉不到这点。比如 Web 应用程序内部发生错误，状态码依然返回 200 OK，这种情况也经常遇到)
  * **
+* ## 第五章 与HTTP协作的Web服务器
+一台Web服务器可以搭建多个独立域名的Web网站，也可以作为通信路上的中转服务器提示传输效率
+
+HTTP/1.1规范允许一台HTTP服务器搭建多个Web站点，即使物理层面只有一台服务器，但只要使用了**虚拟主机（又称虚拟服务器）**的功能就可以假想已具有多台服务器
+
+当客户端使用HTTP协议访问服务器时，经常会采用主机名和域名，这些域名通过DNS服务映射到IP地址之后访问目标网站，所以当一台服务器内托管了多个域名，收到请求时就要搞清楚究竟要访问哪个域名（这是因为它们的IP地址会相同）。这时就必须在发送HTTP请求时在Host首部内完整指定主机名或域名的URI
+
+在HTTP通信时，除了客户端和服务器还有一些用于通信数据转发的应用程序，如**代理、网关、隧道**。这些应用程序和服务器可以将请求转发给通信线路上的下一站服务器，并且能接收从那台服务器发送的响应再转发给客户端
+
+1. **代理：**
+代理是一种有转发功能的应用程序，扮演了位于服务器和客户端“中间人”的角色，接收客户端的请求转发给服务器，也接收服务器的响应转发给客户端
+<br>代理服务器的基本行为就是接收客户端发送的请求后转发给其他服务器。代理不改变请求URI。持有资源实体的服务器称为源服务器，从源服务器返回的响应经过代理服务器后再传给客户端
+<br>每次通过代理服务器转发时会追加写入**Via**首部信息
+<br>使用代理服务器可以利用缓存技术减少网络宽带的流量，组织内部针对特定网站的访问控制，以获取访问日志为主要目的
+<br>代理有多种使用方法，按两种基准分：**一种是是否使用缓存，另一种是是否会修改报文**<br>
+缓存代理：代理转发响应时会预先将资源的副本（缓存）保存在代理服务器上。当代理再次收到对相同资源的请求时，就可以不从服务器获取资源，而是将之前缓存的资源作为响应返回
+<br>透明代理：转发或响应时不对报文做任何加工的代理。反之对报文内容进行加工的称为非透明代理
+2. **网关：**
+网格是转发其他服务器通信数据的服务器，接收从客户端发来的请求时就像自己拥有资源的服务器用于对请求进行处理
+<br>利用网关可以由HTTP请求转化为其他协议通信。网关的工作机制和代理相似，但网关能使通信线路上的服务器提供非HTTP协议服务
+<br>利用网关能提高通信的安全性，因为可以在客户端和网关之间的通信线路上加密确保连接安全
+3. **隧道：**
+隧道是在相隔很远的客户端与服务器进行中转，并保持双方通信连接的应用程序
+<br>隧道可以按要求建立起一条与其他服务器的通信道路，使用SSL等加密手段进行通信，目的是确保客户端能和服务器安全通信
+<br>隧道本身不会去解析HTTP请求。隧道会在通信双方断开连接时结束
+
+**缓存**指的是代理服务器或客户端本地磁盘内保存的资源副本，利用缓存可以减少对源服务器的访问，节省通信流量和通信时间
+
+缓存服务器是代理服务器的一种，并归类在缓存代理类型中。换句话说，当代理转发从服务器返回的响应时，代理服务器将会保存一份资源的副本。这样源服务器就不用多次处理相同的请求了
+
+缓存是有有效期限的，当源服务器的资源更新时，如果缓存没有更新，那么响应的内容就是之前的旧资源。即使存在缓存，也会因为客户端的要求、缓存的有效期等因素，向源服务器确认资源有效性，如果判断缓存失效，就会再次从服务器上获取资源
+
+缓存不仅可以存在缓存服务器内，也可以存在客户端浏览器里面。浏览器缓存如果有效，就不必再向服务器请求相同的资源了，可以直接从本地磁盘内读取。如果失效就会和缓存服务器一样向源服务器请求新资源
+
+* **
  * # 代码部分
 
 后面的想法就是做个导航栏还有下面色彩选择的部分希望能选择一个色彩展示人物相关信息
