--- a/fuhuo987/陈俊翰.md.1.md
+++ b/fuhuo987/陈俊翰.md.1.md
@@ -1473,7 +1473,172 @@ HTTP/1.1定义了七种警告，警告码具有拓展性，可能之后追加新
 |199|Miscellaneous warning（杂项警告）|任意的警告内容|
 |214|Transformation applied（使用了转换）|代理对内容编码或媒体类型等执行了某些处理时|
 |299|Miscellaneous persistent warning（持久杂项警告）|任意的警告内容|
+<br>
 
+* **
+* ### 请求首部字段
+
+**Accept**首部字段可以通知服务器，用户代理能够处理的媒体类型及媒体类型的相对优先级。可以使用type/subtype的形式指定多个媒体类型
+|媒体类型| 格式 |
+|--|--|
+| 文本文件 | **text/html,text/plain,text/css... application/xhtml+xml,application/xml...** |
+| 图片文件 | **image/jpeg,image/gif,image/png...** |
+|视频文件|**video/mpeg,video/quicktime...** |
+| 应用程序使用的二进制文件 | **application/octet-stream,application/zip...** |
+<br>
+
+如果想给显示的媒体类型加优先级，就用q=来额外表示权重值，用分号（；）进行分隔，q的范围是0~1，可以精确到小数点后三位
+
+**Accept-Charset**首部字段可以用来通知服务器用户代理支持的字符集和字符集相对优先顺序，和Accept一样用q表示相对优先集。该首部字段应用于内容协商机制的服务器驱动协商
+
+**Accept-Encoding**首部字段告知服务器用户代理支持的内容编码及内容编码的优先级顺序，如：**gzip**（由文件压缩程序gzip（GNU zip）生成的编码格式，采用Lempel-Ziv算法和32位循环冗余校验）、**compress**（由UNIX文件压缩程序compress生成的编码格式，采用LempelZiv-Welch算法（LZW））、**deflate**（组合使用zlib格式及由deflate压缩算法生成的编码格式）、**identity**（不执行压缩或不会变化的默认编码格式）
+
+**Accept-Language**首部字段用于告知服务器用户代理能够处理的自然语言集，和自然语言集的相对优先级，一样用权重值q表示。格式如：```Accept-Language: zh-cn,zh;q=0.7,en-us,en;q=0.3```
+
+**Authorization**首部字段是用来告知服务器用户代理的认证信息。通常想要通过服务器认证的用户代理会在接收到返回的401状态码响应后，把首部字段Authorization加入请求中
+
+**Expect**首部字段用来告知服务器期望出现的某种特定行为。如果服务器无法理解客户端的期望做出回应而发生错误时，会返回状态码417 Expectation Failed
+
+客户端可以利用该首部字段， 写明所期望的扩展。虽然 HTTP/1.1 规范只定义了100-continue（状态码100 Continue之意）。等待状态码100响应的客户端在发生请求时，需要指定Expect:100- continue
+
+**From**首部字段用来告知服务器使用用户代理的用户电子邮件地址。通常，其使用目的就是为了显示搜索引擎等用户代理的负责人的电子邮件联系方式
+
+**Host**首部字段用于区分运行在同一个IP上的虚拟主机。Host首部字段是HTTP/1.1规范内唯一一个必须被包含在请求内的首部字段。其格式如：```Host:www.hackr.jp```
+
+**If-Match**首部字段，形如If-XXX这样形式的请求首部字段都可以称为条件请求，只有服务器判断指定条件为真时才会执行请求
+
+只有当If-Match的字段值跟ETag值匹配一致时，服务器才会接受请求，否则返回状态码412 Precondition Failed的响应
+
+（还可以使用星号（*）指定 If-Match 的字段值。针对这种情况，服务器将会忽略ETag的值，只要资源存在就处理请求）
+
+**If-Modified-Since：** 如果在其指定的日期时间之后资源发生了更新，服务器会接受请求。如果该时间之后资源都没有更新，则返回状态码304 Not Modified的响应
+
+**If-None-Match**首部字段和If-Match作用相反
+
+**If-Range**首部字段属于附带条件之一，它告知服务器若指定的If-Range字符值（Etag值或者时间）和请求资源的一致时，则作为范围请求处理，否则返回全部资源
+
+**If-Unmodified-Since**首部字段的作用和If-Modified的作用相反
+
+**Max-Forwards：** 通过TRACE方法或OPTIONS方法， 发送包含首部字段MaxForwards的请求时，该字段以十进制整数形式指定可经过的服务器最大数目。服务器在往下一个服务器转发请求之前，Max-Forwards的值减1后重新赋值。当服务器接收到Max-Forwards值为0的请求时，则不再进行转发，而是直接返回响应
+
+使用该首部字段可以调查传输路径的通信状况
+
+**Proxy-Authorization：** 当收到代理服务器发来的认证质询时，客户端会发送包含该首部字段的请求，告知服务器认证需要的信息。（这个认证行为在客户端和代理之间，客户端和服务器之间的认证用Authorization首部字段）
+
+**Range**首部字段用于只需获取部分资源的范围请求，收到带该首部字段请求的服务器会在处理请求后返回状态码206 Partial Content的响应。如果无法处理该请求，就会返回200 OK并返回全部资源
+
+**Referer**首部字段会告知服务器请求的原始资源的URI。但可能会有安全性问题，可以考虑不发送该首部字段。（顺便它的正确拼写应该是Referrer，但大家都用这个错误的拼写）
+
+**TE**首部字段会告知服务器客户端能够处理响应的传输编码和相对优先级（也是q），和Accept-Encoding功能很香，但是用于传输编码
+
+它除了指定传输编码，还可以指定伴随trailer字段的分块传输编码方式，只需把trailers赋值给字段值
+
+**User-Agent**用于传达浏览器的种类，它会将浏览器和用户代理名称传达给服务器。由网络爬虫发起请求时，有可能会在字段内添加爬虫作者的电子邮件地址。如果请求经过代理，中间也可能加上代理服务器的名称
+* **
+* ### 响应首部字段
+
+**Accept-Ranges**首部字段用来告知客户端服务器能否处理范围请求，以指定获取服务器端某个部分的资源。可指定的值有两种：**bytes（可处理范围请求时）**、**none**
+
+**Age**首部字段告知客户端源服务器在多久前创建了响应，单位为秒。如果是缓存服务器创建该响应，那么其值指的是缓存后的响应再次发起认证到认证完成的时间值。代理创建响应时必须加上首部字段Age
+
+**Etag**首部字段能告知客户端实体标识，是一种可将资源以字符串形式做唯一性标识的方式，服务器会为每份资源分配Etag值
+
+资源更新时Etag值也需要更新，没有生成Etag统一的算法规则，仅仅由服务器分配
+
+Etag值有强弱之分，强Etag值不管实体发生了多么细微的变化都会改变其值。弱Etag值只用于提示资源是否相同，只有资源发生了根本改变产生强烈差异时才会改变Etag值。这时会在字段值最开始时附加```W/```
+
+**Location**首部字段可以将响应接收方引导至某个和请求URI不同的资源，该字段会配合3xx重定向响应。几乎所有的浏览器在接收到包含首部字段 Location 的响应后，都会强制性地尝试对已提示的重定向资源的访问
+
+**Proxy-Authenticate**首部字段会把由代理服务器所要求的认证信息发送给客户端
+
+它与客户端和服务器之间的HTTP访问认证的行为相似，不同之处在于其认证行为是在客户端与代理之间进行的。而客户端与服务器之间进行认证时，首部字段WWW-Authorization有着相同的作用
+
+**Retry-After**首部字段告知客户端应该在多久之后再次发送请求，主要配合503 Service Unavailable或3XX Redirect一起使用
+
+字段值可以是具体的时间日期，也可以是创建响应后的秒数
+
+**Server**首部字段告知客户端当前服务器上安装的HTTP服务器应用程序的信息，不止标出服务器上软件应用名称，还有可能包括版本号和安装时启用的可选项
+
+**Vary：** 当代理服务器收到带有Vary首部字段指定获取资源的请求时，如果使用的Accept-Language字段的值相同，那么就直接从缓存返回响应，否则就要从源服务器获取资源此案作为响应返回
+
+首部字段Vary可对缓存进行控制。从代理服务器接收到源服务器返回包含Vary指定项的响应之后，若再要进行缓存，仅对请求中含有相同Vary指定首部字段的请求返回缓存。即使对相同资源发起请求，但由于Vary指定的首部字段不相同，因此必须要从源服务器重新获取资源
+
+**WWW-Authenticate**首部字段用于HTTP访问认证，告知客户端适用于访问请求URI所指的资源的认证方案和带参数提示的质询，状态码401 Unauthorized响应中一定带有该首部字段
+* **
+* ### 实体首部字段
+
+**Allow**首部字段用于通知客户端能够支持Request-URI指定资源的所有HTTP方法。当服务器接收到不支持的HTTP方法时会以状态码405 Method Not Allowed作为响应返回，还会把所有支持的HTTP方法写入Allow中返回
+
+**Content-Encoding**首部字段会告知客户端服务器对实体的主体部分选用的内容编码方式（各方式看Accept-Encoding的笔记）
+
+**Content-Language**首部字段会告知客户端实体主体使用的自然语言
+
+**Content-Length**首部字段表明了实体主体部分的大小，单位是字节。对实体部分进行编码传输时，不能使用该首部字段
+
+**Content-Location**首部字段给出报文主体部分相对应的URI。和Location不同，它表示的是报文主体返回资源对应的URI。
+
+对于使用首部字段Accept-Language的服务器驱动型请求，当返回的页面内容和实际请求对象不同时，它会写明URI
+
+**Content-MD5：** 客户端会对接收的报文主体执行相同的MD5算法，然后和该首部字段的字段值相比较，目的在于检查报文主体在传输过程中是否保持完成以及确认传输到达
+
+**Content-Range：** 针对范围请求，返回响应时使用的首部字段Content-Range，能告知客户端作为响应返回的实体的哪个部分符合范围请求。字段值以字节为单位，表示当前发送部分及整个实体大小
+
+**Content-Type**首部字段说明了实体主体内对象的媒体类型，和首部字段Accept一样，字段值用type/subtype形式赋值。其格式如下：
+```Content-Type: text/html; charset=UTF-8```
+参数 charset 使用 iso-8859-1 或 euc-jp 等字符集进行赋值
+
+**Expires**首部字段会将资源失效日期告诉客户端。缓存服务器在接收到含有该首部字段的响应后会以缓存来应答请求，在其指定的时间之前响应的副本会一直被保存。如果超过了时间，缓存服务器收到请求时会转向源服务器请求资源
+
+源服务器不希望缓存服务器对资源缓存时，最好在 Expires 字段内写入与首部字段 Date 相同的时间值。如果Cache-Control有max-age指令时，会先处理max-age指令
+
+**Last-Modified**首部字段指明资源最终修改的时间
+
+* **
+* ### 为Cookie服务的首部字段
+
+虽然Cookie没有被编入标准化的HTTP/1.1的RFC2616中，但在Web网站有广泛的应用
+
+Cookie的工作机制是用户识别和状态管理，调用Cookie时因为可以校验Cookie的有效期和发送方的域、路径、协议等信息，正规发布的Cookie内的数据不会因为其他Web站点的攻击而泄露
+
+为Cookie服务的首部字段有**Set-Cookie**和**Cookie**
+
+**Set-Cookie**是响应首部字段，当服务器准备开始管理客户端的状态时会事先告知各种信息。其属性有：
+|属性|说明|
+|--|--|
+|**NAME=VALUE**|赋予Cookie的名称和其值（必需项）|
+|**expires=DATE**|Cookie的有效期（若不明确指定则默认为浏览器关闭前为止）|
+|**path=PATH**|将服务器上的文件目录作为Cookie的适用对象（若不指定则默认为文档所在的文件目录）|
+|**domain=域名**|作为Cookie适用对象的域名（若不指定则默认为创建Cookie的服务器的域名）|
+|**Secure**|仅在HTTPS安全通信时才会发送 Cookie|
+|**HttpOnly**|加以限制，使Cookie不能被JavaScript脚本访问|
+
+**expires属性**指定浏览器可发送Cookie的有效期，如果省略就代表有效期仅限于维持浏览器会话的时间段内。一旦Cookie通过服务器发送至客户端，服务器端就不存在可显式删除Cookie的方法，但可以覆盖已过期的Cookie实现对客户端Cookie的实质删除
+
+**path属性**限制指定Cookie的发送范围的文件目录。但有办法避开这个限制，不能对安全性抱怨期待
+
+**domain属性：** 通过Cookie的domain属性指定的域名可做到与结尾匹配一致（指定example.com后，除example.com以外，www.example.com或www2.example.com等都可以发送 Cookie）。所有除了针对具体指定的多个域名发送Cookie之外，不指定domain属性更安全
+
+**secure属性**用于限制 Web 页面仅在HTTPS安全连接时，才可以发送Cookie。如```Set-Cookie: name=value; secure```就是只有在https://www.example.com/（HTTPS）安全连接的情况下才会进行Cookie回收，即使域名相同，http://www.example.com/（HTTP）不会发生回收Cookie的行为
+
+如果省略这个属性那就一律回收了
+
+**HttpOnly属性**是Cookie的扩展功能，主要是防止JavaScript跨站脚本攻击信息窃取Cookie。Web页面内还可以对Cookie读取，但JS里的document。cookie就无法读取内容
+
+**Cookie：** 首部字段Cookie会告知服务器，当客户端想获得HTTP状态管理支持时，就会在请求中包含从服务器接收到的Cookie。接收到多个Cookie时，同样可以以多个Cookie形式发送
+
+* **
+* ### 其他首部字段
+
+HTTP的首部字段是可以自行扩展的，所有会出现各种非标准的首部字段，以下是一些常见的首部字段：
+
+1. **X-Frame-Options**
+属于HTTP响应首部，控制网站内容在其他Web网站的Frame标签内的显示问题。主要是防止点击劫持攻击<br><br>它有两个可指定的字段值：**DENY（拒绝）**、**SAMEORIGIN（仅同源域名下的页面）**
+2. **X-XSS-Protection**
+属于HTTP响应首部，是针对跨站脚本攻击（XSS）的一种对策，用于控制浏览器 XSS 防护机制的开关<br><br>它有两个可指定的字段值：**0：将 XSS 过滤设置成无效状态**、**1：将 XSS 过滤设置成有效状态**
+3. **DNT**
+属于HTTP请求首部，是Do Not Track的简称，拒绝被精确广告追踪的一种方法<br><br>它有两个可指定的字段值：**0：同意被追踪**、**1：拒绝被追踪**
+4. **P3P**
+属于HTTP响应首部，可以使Web网站上的个人隐私变成一种仅供程序可以理解的形式，保护用户隐私<br><br>要进行P3P设定，首先要创建P3P隐私，然后创建P3P隐私对照文件后，保存命名在 /w3c/p3p.xml，最后从P3P隐私中新建Compact policies后，输出到HTTP响应中
 * **
  * # 代码部分
 
