--- a/fuhuo987/陈俊翰.md.1.md
+++ b/fuhuo987/陈俊翰.md.1.md
@@ -1787,6 +1787,116 @@ SSL客户端认证是借由HTTPS客户端证书完成认证的方式。其步骤
 
 （另：加盐就是由服务器随机生成一个很长的字符串，与密码字符串相连接然后计算散列值，这样即使两个用户的密码是一样的散列值也会不同，很大程度上减少了密码特征）
 * **
+* ## 第九章 基于HTTP的追加功能
+
+随着时代的发展，HTTP功能上的不足已经逐渐显现，于是就有了一些基于HTTP的新协议，在HTTP的基础上添加了新功能
+
+**SPDY**是由Google在2010年发布的，其开发目标旨在解决HTTP的性能瓶颈，缩短Web页面的加载时间（50%）
+
+**HTTP的瓶颈：** 在一些SNS网站上，很短的时间就会产生大量的请求。为了尽可能地实时反馈这些更新内容，服务器上一有内容更新就需要直接把那些内容反馈到客户端界面。如果使用HTTP协议探知更新，就需要频繁地向服务器端确认，会产生大量徒劳的通信
+
+如果想实现这些功能，有些HTTP标准会成为瓶颈：
+
+1. 一条连接上只可发送一个请求
+2. 请求只能从客户端开始，客户端只能接收响应指令
+3. 请求 / 响应首部未经压缩就发送。首部信息越多延迟越大
+4. 每次互相发送相同的首部造成的浪费较多
+5. 可以任意选择压缩格式，非强制压缩
+<br>
+
+**Ajax（Asynchronous JavaScript and XML，异步JavaScript与XML技术）** 有效利用了JS和DOM（Document Object Model，文档对象模型）的操作，达到局部Web页面替换加载的异步通信手段，和之前的同步通信相比因为只传输一部分页面所有传输数据量变少
+
+其核心技术是叫做XMLHttpRequest的API，通过JavaScript脚本语言的调用就能和服务器进行HTTP通信，从而在已经加载完毕的Web页面上发起请求，只更新局部页面
+
+但是使用Ajax实时从服务器获取内容，有可能会导致大量请求产生，它也没有解决HTTP协议本身存在的问题
+
+**Comet**不会让请求等待服务器内容更新，而是已有资源更新直接向客户端返回响应，通过延迟应答模拟服务器端向客户端推送的功能
+
+通常服务器都是立刻处理请求并返回响应，但为了实现推送功能，Comet将响应处于挂起状态，一旦服务器有资源更新，再返回响应。虽然做到了实时更新，但是一次连接的持续时间也变长了，会消耗更多资源，同时它也没有解决HTTP协议本身存在的问题
+
+虽然这两个办法一定程度上使HTTP得到了改善，但没有消除HTTP的瓶颈，处于持续开发中的SPDY正是为了在协议级别消除HTTP所遭遇的瓶颈
+
+**SPDY**没有完全改写HTTP协议，而是在TCP/IP的应用层和运输层直接通过新加**会话层**的形式运作，同时考虑到安全性，它规定通信中使用SSL
+
+SPDY以会话层形式加入，控制对数据的流动，但还是采用HTTP建立通信连接。在使用SPDY后，HTTP协议额外获得以下功能
+
+1. **多路复用流**
+通过单一的TCP连接，可以无限制处理多个HTTP请求。所有请求在一条TCP连接上完成，处理效率高
+2. **赋予请求优先级**
+SPDY不仅可以无限制地并发请求，还可以给请求赋予优先级顺序，这样可以在发送多个请求时解决因宽带低导致的响应变慢
+3. **压缩HTTP首部**
+压缩请求和响应的HTTP首部，减少发送的字节数
+4. **推送功能**
+支持服务器向客户端推送，不必等待客户端请求
+5. **服务器提示功能**
+服务器可以主动提示客户端请求所需的资源。由于在客户端发现资源之前就可以获知资源的存在，因此在资源已缓存等情况下，可以避免发送不必要的请求。
+
+**WebSocket**是HTML5标准的一部分，现在它逐渐变成了独立的协议，它是为了解决Ajax和Comet里XMLHttpReques附带的缺陷所引起的问题
+
+一旦服务器和客户端之间建立起WebSocket协议的通信连接，之后所有的通信都依靠这个专用协议进行。
+
+因为是建立在HTTP基础上的协议，所有连接的发起方仍然是客户端，但是一旦WebSocket通信建立，不管是哪一方都可以直接向对方发送报文
+
+其特点如下：
+
+1. **推送功能**
+服务器直接向客户端发送数据的推送功能，不必等待客户端请求
+2. **减少通信量**
+只要建立起WebSocket连接， 就希望一直保持连接状态，并且其首部信息很小
+<br>
+为了完成WebSocket通信，需要在HTTP连接建立后完成“握手”的步骤，**请求**时用Upgrade首部字段告知服务器通信协议发生改变，达到握手的目的
+
+Sec-WebSocket-Key字段内记录着握手过程中必不可少的键值。Sec-WebSocket-Protocol字段内记录使用的子协议
+
+对应之前的请求，**响应**返回状态码101 Switching Protocols
+
+成功握手确立WebSocket连接之后， 通信时不再使用 HTTP 的数据帧， 而采用WebSocket独立的数据帧
+
+HTTP/2.0的七项技术讨论：
+|||
+|--|--|
+|压缩|SPDY、 Friendly|
+|多路复用|SPDY|
+|TLS 义务化|Speed＋ Mobility|
+|协商|Speed＋ Mobility， Friendly|
+|客户端拉曳（Client Pull） /服务器推送（Server Push）|Speed＋ Mobility|
+|流量控制|SPDY|
+|WebSocket|Speed＋ Mobility|
+<br>
+
+**WebDAV** 是一个可以对Web服务器上的内容直接进行文件复制、编辑等操作的分布式文件系统。它作为扩展HTTP/1.1协议定义在RFC4918
+
+除了上面的基本功能，它还能进行文件创建者管理、文件编辑过程中禁止其他用户内容覆盖的加锁功能，还有对文件修改的版本控制功能
+
+WebDAV针对服务器上的资源做了一些概念扩展：
+
+1. **集合**是一种统一管理多个资源的概念，以集合为单位可以进行各种操作，集合也可以嵌套
+2. **资源**是指文件或集合
+3. **属性：** 资源属性的定义以“名称=值”的格式执行
+4. **锁**会把文件设置成无法编辑状态，多人同时编辑时可以防止在同一时间进行内容写入
+
+WebDAV为了实现远程资源管理，还向HTTP/1.1追加了一些方法和状态码：
+|方法| 描述 |
+|--|--|
+| **PROPFIND** | 获取属性 |
+| **PROPPATCH** | 修改属性 |
+|**MKCOL**  | 创建集合 |
+| **COPY** | 复制资源和属性 |
+| **MOVE** | 移动资源 |
+| **LOCK** | 资源加锁 |
+| **UNLOCK** | 资源解锁 |
+
+| 状态码 | 描述 |
+| -- | --|
+|**102 Processing**|可正常处理请求， 但目前是处理中状态|
+|**207 Multi-Status**|存在多种状态|
+|**422 Unprocessible Entity**|格式正确，内容有误|
+|**423 Locked**|资源已经被上锁|
+|**424 Failed Dependency**|处理与某请求关联的请求失败，不再维持依赖关系|
+|**507 Insufficient Storage**|保存空间不足|
+
+* **
+
  * # 代码部分
 
 后面的想法就是做个导航栏还有下面色彩选择的部分希望能选择一个色彩展示人物相关信息
