2/2 图解HTTP终极无敌版

--- a/fuhuo987/陈俊翰.md.1.md
+++ b/fuhuo987/陈俊翰.md.1.md
@@ -1896,6 +1896,150 @@ WebDAV为了实现远程资源管理，还向HTTP/1.1追加了一些方法和状
 |**507 Insufficient Storage**|保存空间不足|
 
 * **
+* ## 第十章 构建Web内容的技术
+
+Web页面几乎全由HTML构建。动态HTML指的是使用客户端脚本将静态的HTML内容变成动态的技术的总称。这是通过调用JS实现对HTML的Web页面的动态改造，利用DOM（Document Object Model，文档对象模型）可指定欲发生动态变化的HTML元素
+
+**DOM**是用以操作XML文档的API，使用DOM可以将HTML的元素当对象操作。通过JS等脚本语言对DOM的操作，可以用更简单的方法控制HTML的改变
+
+**Web**应用指的是通过Web功能提供的应用程序。原来应用HTTP协议的Web机制就是对客户端发来的请求返回准备好的内容。但随着Web的普及，需要引入由程序创建HTML内容的做法。这种由程序创建的内容称为动态内容
+
+**CGI（Common Gateway Interface，通用网关接口）** 是指服务器在接收到客户端发送过来的请求后转发给程序的一组机制。
+
+使用CGI的程序叫做CGI程序，通常由Perl、PHP、Ruby和C等编程语言编写而成
+
+**Servlet**是一种能在服务器上创建动态内容的程序，它是用Java语言实现的一个接口，属于面向企业级Java的一部分
+
+CGI由于每次收到请求程序都要启动一次，在访问量过大时负载很大，但Servlet运行在与Web服务器相同的进程中，受到的负载较小。Servlet作为解决CGI问题的对抗技术，随Java一起得到了普及
+
+**XML（eXtensible Markup Language，可扩展标记语言）** 是一种可按应用目标进行扩展的通用语言标记。旨在通过XML使互联网数据共享变得容易
+
+它和HTML一样都是从SGML简化而成，但它对数据的记录方式做了特殊处理
+
+XML和HTML一样，使用标签构成树形结构，并且可自定义扩展标签。从XML文档中读取数据比HTML更简单，因为其结构基本上都是用标签分割而成的树形结构。更容易地复用数据使XML在互联网被广泛接受
+
+**RSS（简易信息聚合，也叫聚合内容）** 和**Atom**都是发布新闻或博客日志等更新信息文档的格式的总称，两者都用到了XML
+
+**JSON（JavaScript Object Notation）** 是以JS的对象表示法为基础的轻量级标记语言，能处理的数据类型有false/null/true/ 对象 / 数组 / 数字 / 字符串
+
+它让数据更轻更纯粹，可以被JS更轻易读入。另外，其他各种编程语言也提供丰富的库类，以达到轻便操作 JSON 的目的
+* **
+* ## 第十一章 Web的攻击技术
+
+互联网上的攻击大多以Web站点作为攻击目标
+
+简单的HTTP协议本身不存在安全性问题，所以不会将协议本身作为攻击对象。攻击对象是应用HTTP协议的服务器、客户端和运行在服务器上的Web应用等资源。大多数来自互联网的攻击目标都是Web站点
+
+HTTP就是一个单纯的协议机制，具备较多优势，但随在安全性方面呈现劣势，需要开发者自行设计并开发会话管理功能，可能存在安全漏洞
+
+在HTTP请求报文内加载攻击代码，就能发起对Web应用的攻击。通过URL查询字段或表单、HTTP首部、Cookie等途径把攻击代码传入，如果Web应用存在漏洞，内部信息就会遭到窃取或被攻击者拿到管理权限
+
+对Web应用的攻击有两种形式：**主动攻击、被动攻击**
+
+主动攻击指的是攻击者通过直接访问Web应用，把攻击代码传入的攻击方式。因为是要针对服务器上的资源进行攻击，所以需要攻击者能够访问到那些资源
+
+主动攻击具有代表性的是**SQL注入攻击**和**OS命令**注入攻击
+
+被动攻击是指利用圈套策略执行攻击代码的攻击模式，攻击者不直接对Web应用访问发动攻击，步骤如下
+
+1. 诱使用户触发已经设置好的陷阱，陷阱启动发送嵌入攻击代码的HTTP请求
+2. 中招之后用户的浏览器或邮件客户端就会触发这个陷阱
+3. 中招后的用户浏览器会把含有攻击代码的 HTTP 请求发送给作为攻击目标的 Web 应用，运行攻击代码
+4. 执行完攻击代码，存在安全漏洞的Web应用就会成为攻击者的跳板，可能会使用户Cookie泄露或登录状态用户权限遭恶意篡改
+
+被动攻击中具有代表性的攻击是跨站脚本攻击和跨站点请求伪造
+
+利用被动攻击可以对原本互联网上无法直接访问的企业内网进行攻击
+
+**跨站脚本攻击**指的是通过存在安全漏洞的Web网站注册用户的浏览器运行非法的HTML标签或者JS进行的一种攻击。动态创建的 HTML部分有可能隐藏着安全漏洞
+
+**SQL注入攻击**是指针对Web应用使用的数据库，通过运行非法的SQL而产生的攻击。该安全隐患可能引发极大的威胁。
+
+Web应用通常会用到数据库，会使用SQL语句连接数据库进行指定的操作，如果在调用SQL语句上存在漏洞，就有可能执行被恶意注入的非法SQL语句
+
+SQL注入是攻击者将 SQL语句改变成开发者意想不到的形式以达到破坏结构的攻击
+
+**OS命令注入攻击**是指通过Web应用，执行非法的操作系统命令达到攻击的目的，只要是在能调用Shell函数的地方就有存在被攻击的风险
+
+OS命令注入攻击可以向Shell发送命令，让Windows或Linux操作系统的命令行启动程序
+
+**HTTP首部注入攻击**是指攻击者在响应首部字段内插入换行，添加任意响应首部或主体的一种攻击，属于被动攻击模式
+
+比如说攻击者发送请求```101%0D%0ASet-Cookie:+SID=123456789```，其中```%0D%0A```是HTTP报文中的换行符后面是强制将攻击者网站的会话ID设置成SID=123456789的Set-Cookie首部字段。如果结果返回以下响应：
+```
+Location: http://example.com/?cat=101（%0D%0A ： 换行符） 
+Set-Cookie: SID=123456789
+```
+这时首部字段Set-Cookie已经生效，攻击者可以指定修改任意的Cookie信息，通过和绘画固定攻击组合，攻击者可以伪装成用户
+
+本来的```%0D%0A```属于Location的查询值部分，但经过解析后变成了换行符，结果插入了新的首部字段
+
+**HTTP响应截断攻击**是用在HTTP首部注入的一种攻击。攻击顺序相同，但随要将两个```%0D%0A```并排插入字符串后发送，这样就可以作出HTTP首部和主体分隔所需的空行从而显示伪造的主体
+
+**邮件首部注入攻击**是指Web应用中的邮件发送功能，攻击者通过向邮件首部To或Subject内任意添加非法内容发起攻击。通过存在安全漏洞的Web网站对任意邮件地址发送广告邮件或病毒邮件
+
+**目录遍历攻击**是指对无意公开的文件目录通过非法截断其目录路径后达成访问目的的一种攻击，有时候也被叫做**路径遍历攻击**
+
+在由外部指定文件名的处理存在疏漏的情况下，用户可使用 .../ 等相对路径定位到 /etc/passwd 等绝对路径上，服务器上的任意文件或文件目录都有可能被访问到
+
+**远程文件包含漏洞**是指当部分脚本内容需要从其他文件读入时，攻击者利用指定外部服务器的URL充当依赖文件，脚本读取后就可以运行任意脚本的一种攻击
+
+这主要是PHP存在的漏洞，因为太过危险在PHP5.2.0之后默认设定此功能无效
+
+还有一些因设置或设计上的缺陷引发的安全漏洞
+
+**强制浏览**安全漏洞指的是从安置在Web服务器的公开目录下的文件中浏览原本非自愿公开的文件
+
+一般来说它们的URL是隐藏的，但一旦被人发现或猜到就可以浏览其对应的文件
+
+**不正确的错误消息处理**是指Web应用的错误信息里包含对攻击者有用的信息。对应这种情况各系统应对详细的错误消息进行抑制设定，或使用自定义错误消息，以避免某些错误信息给攻击者以启发
+
+**开发重定向**功能的安全漏洞是如果重定向URL到某个恶意Web网站，那么用户就会到那个网站去
+
+```
+http://example.com/?redirect=http://www.tricorder.jp
+```
+攻击者把指定的参数进行修改
+```
+http://example.com/?redirect=http://hackr.jp
+```
+<br>
+用户原以为访问example.com，但被诱导到了hackr.jp这个重定向目标
+
+会话管理是管理用户状态的必备功能，但如果有疏忽也会导致严重后果
+
+**会话劫持**指的是攻击者通过某种手段拿到用户的会话ID，非法使用此ID伪造成用户从而完成攻击。他可能使用的手段可能是：**通过非正规的生成方法推测会话ID、通过窃听或XSS攻击盗取会话ID、通过会话固定攻击（ Session Fixation）强行获取会话ID等等等等**
+
+和窃取目标会话ID的主动攻击手段不同，**会话固定攻击**会强制用户使用攻击者指定的会话ID，属于被动攻击
+
+**跨站点请求伪造**是指攻击者通过设置好的陷阱，强制对已完成认证的用户进行非预期的个人信息或设定信息等某些状态更新，属于被动攻击
+
+还有一些其他的安全漏洞
+
+**密码破解**即算出密码突破认证，这不仅限于Web应用，还包括其它系统，它有两种手段：**通过网络的密码试错、对已加密的密码破解**
+
+出去突破认证的攻击手段，还有SQL注入攻击逃避认证，跨站脚本攻击窃取密码信息的方法
+
+密码试错主要有两种办法：**穷举法和字典攻击**
+
+**穷举法**又叫暴力破解法，用所有可行的密码进行试错，但是当密钥空间很庞大时，试出密码要很久
+
+**字典攻击**是利用事先收集好的密码，枚举字典种的密码进行尝试，虽然时间会比穷举法短，但是字典里得包含正确的密码
+
+字典攻击中有一种利用其他Web网站已泄露的ID及密码列表进行的攻击，这样成功率很高
+
+破解加密密码需要从以某种手段得到的密码数据中解码，将加密后的密码还原成明文形式，一般有这些方法：**通过穷举法·字典攻击进行类推、彩虹表、拿到密钥、加密算法的漏洞**
+
+（**彩虹表**是由明文密码及与之对应的散列值构成的一张数据库表是一种通过事先制作庞大的彩虹表，可在穷举法/字典攻击等实际破解过程中缩短消耗时间的技巧。从彩虹表内搜索散列值就可以推导出对应的明文密码）
+
+**点击劫持**是指利用透明的按钮或者链接做成陷阱，覆盖在整个Web页面上，用户在不知情的情况下点击从而达成攻击的手段
+
+**DoS**攻击是一种让运行中的服务器呈停止状态的攻击，它的攻击对象除了Web还有网络设备和服务器，主要有两种方式：**1.集中利用访问请求造成资源过载，资源用尽的同时，实际上服务也就呈停止状态 2.通过攻击安全漏洞使服务停止**
+
+由多台计算机发起的DoS被称为**DDoS**攻击，DDoS攻击通常利用那些感染病毒的计算机作为攻击者的跳板（肉鸡）
+
+**后门程序**指的是开发设置的隐藏入口，可以不按正常步骤使用受限功能，分为三种类型：**开发时作为Debug时调用的后门程序、开发者为了自身利益植入的后门程序、攻击者植入的后门程序**
+* **
 
  * # 代码部分
 
