--- a/fuhuo987/陈俊翰.md.1.md
+++ b/fuhuo987/陈俊翰.md.1.md
@@ -951,6 +951,90 @@ while(条件){要循环的语句}
 
 ```continue```语句意味着立刻终止本轮循环，返回循环体的头部，开始下一轮循环
  *   **
+ *  ## 字符串
+
+字符串就是零个或多个排在一起的字符放在单引号和双引号之中
+
+单引号可以嵌套双引号，双引号可以嵌套单引号，但不能相同引号嵌套。如果要使用相同引号嵌套，就得在引号前添加```\```用来转义
+
+字符串默认只能一行显示，如果要换行需要转义
+
+**charAt**通过输入的下标数字传递相应的字符，如果参数为负数或大于等于字符串的时候，它返回空字符
+
+**concat**用来合并两个字符串，返回一个新字符串，不改变原字符串，语法为```str1.concat(str2)```，将str2合并到str1后面。参数可以有多个（用逗号隔开），如果参数不是字符串，会将参数先转化为字符串再拼接
+
+连接字符串可以不用```concat```，用```+```连接效果一样还简单。但是```concat```完全不会做运算，如果是```+```的话，两个数字会做加法运算而不是转化为字符串连接，只有遇到字符串才会转化为字符串
+
+**substring**是用来截取字符串的方法，从原字符串取出子字符串并返回，不改变原字符串。两个参数分别是首位置下标和末位置下标，但是不包含末位置。（就是字符串切片的方法）
+
+第二个参数不写默认到原字符串结尾，如果第一个参数大于第二个参数它会自动更改两个参数位置。如果参数是负数，它会自动把参数转化为0
+
+**substr**和```substring```作用差不多，都是从原字符串取出子字符串并返回，不改变原字符串。第一个参数是首位置下标，第二个参数是子字符串的长度
+
+如果省略第二个参数就会一直到原字符串的结束。第一个参数如果是负数，表示倒数计算的字符位置；第二个参数如果是负数就会被自动转化成0，最后返回空字符串
+
+**indexOf**方法用来确定一个字符串在另一个字符串中第一次出现的位置，返回结果是匹配开始时的位置，如果不匹配就返回```-1```
+
+该方法还能接受第二个参数，表示从该参数位置后进行查找
+
+**trim**用来去掉字符串两端的空格，返回一个新字符串，不改变原字符串
+
+它不仅能去除空格，还能取出制表符（```\t```、```\v```）、换行符（```\n```）回车符（```\r```）
+
+ES6还新增了```trimEnd```和```trimStart```方法，一个去尾部一个去头部
+
+**split**方法用来按给定规则分割字符串，返回一个由分割字符串组成的数组
+
+如果分割规则是空字符，那么数组的成员就是每一个字符
+如果省略参数，那么数组的唯一成员就是原字符串
+
+该方法还能接收第二个参数，限定返回数组的最大成员数
+ * **
+ * ## 数组
+
+**数组**是按次序排列的一组值，每个值都有编号，整个数组用方括号表示。两端的方括号是数组的标志，任何类型的数据都能被放入数组。可以用```length```属性返回数组的成员数量
+
+数组的遍历可以用for循环或者while循环
+
+还有```for...in```遍历数组，格式如下
+```
+for(var i in a){
+    console.log(a[i]);
+}
+```
+<br>
+
+**Array.isArray** 可以判断对象是不是数组，它可以弥补```typeof```的不足
+
+**push**用来在数组的**末端**添加一个或多个元素，并返回添加后新数组的长度，该方法会改变数组
+
+**pop**方法用来删除数组的**最后一个元素**并返回该元素，该方法同样会改变数组
+
+**shift**方法用来删除数组的**第一个元素**并返回该元素，该方法会改变数组
+
+**unshift**方法用来在数组的**首端**添加一个或多个元素，并返回添加后新数组的长度，该方法会改变数组
+
+**join**方法以指定参数作为分隔符，将所有数组成员连接为一个字符串返回，没有指定参数默认以逗号分隔
+
+如果数组成员是```undefined```或者```null```，会被转为空字符串
+
+```join```和```split```可以实现数组和字符串的互换
+
+**concat**不止用来合并字符串，也可以将一个数组的成员添加到原数组的后面，返回一个新数组，原数组不变。除了将数组作为参数，也可以将其他类型的值作为参数添加到目标数组后面
+
+**reverse**方法用来颠倒数组元素并返回改变后的数组，会改变原数组
+
+**indexOf**方法也可以对数组使用，效果一样，但是查找的是给定元素在数组里第一次出现的位置
+
+* **
+* ## 函数
+
+函数由```function```命令来进行声明，function命令声明的代码区块就是一个函数，```function```后面跟着函数名，函数名后面是括号，里面包含着传入函数的参数，函数体在后面的大括号里面
+
+函数可以先调用再创建，因为函数会自动提升到代码头部
+
+函数用```return```将值返回给外界
+ * **
  * # 图解HTTP笔记
  * ## 第一章 了解Web及网络基础
 
