--- a/fuhuo987/陈俊翰.md.1.md
+++ b/fuhuo987/陈俊翰.md.1.md
@@ -1035,6 +1035,91 @@ for(var i in a){
 
 函数用```return```将值返回给外界
  * **
+ * ## 对象
+对象是JS的核心概念，也是重要的数据类型，它是一组键值对的集合，是一种无序的复合数据集合，形如：
+```
+var user={
+    name:'fuhuo',
+    num: 1234
+};
+```
+对象的每一个键名又称为**属性**，它的键值可以是任何数据类型。如果一个属性的值为函数，通常把这个属性称为**方法**，它可以像函数一样被调用
+
+如果属性的值还是对象，就形成了链式引用
+
+对象的读取方式是通过```对象名.属性```来进行调用
+ * **
+ * ## Math对象
+Math是JS的原生对象，提供各种数学功能
+|对象名|功能  |
+|--|--|
+| ```Math.abs()``` | 返回参数的绝对值 |
+| ```Math.max()/Math.min()``` | 返回参数之中的最大值/最小值 |
+| ```Math.floor()/Math.ceil``` | 返回小于/大于参数的最大整数 |
+| ```Math.random()``` | 返回0~1之间的一个伪随机数，可能为0但一定小于1 |
+
+* **
+* ## Date对象
+
+```Date.now()```返回当前时间距离时间零点（1970年1月1日 00：00：00UTC）的毫秒数
+
+Date对象提供了一系列get方法，用来获取实例对象某个方面的值
+|方法|描述  |
+|--|--|
+| ```getTime()``` | 返回实例距离1970年1月1日 00：00：00的毫秒数 |
+| ```getDate()``` | 返回实例对象对应每个月的几号 |
+| ```getDay()``` | 返回星期几，星期日为0，星期一为1 |
+| ```getYear()``` | 返回距离1900的年数 |
+| ```getFullYear()``` | 返回四位的年份 |
+| ```getMonth()``` | 返回月份（0是1月） |
+| ```getHours()``` | 返回小时（0~23） |
+| ```getMilliceconds``` | 返回毫秒（0~999） |
+| ```getMinutes``` | 返回分钟（0~59） |
+| ```getSeconds``` | 返回秒（0~59） |
+
+ * **
+ * ## DOM
+DOM是JS操作网页的接口，全称为“文档对象模型”（Documm Object Model），它的作用是将网页转为一个JS对象，从而可以用脚本进行各种操作
+
+浏览器会根据DOM模型将结构化文档HTML解析成一系列节点，再由这些节点组成一个树状结构（DOM Tree），所有的节点和最终的树状结构都有规范的对外接口
+
+DOM只是一个接口规范，可以用各种语言实现，但DOM操作是JS的常见任务，离开了DOM，JS就无法操作控制网页，JS也是最常用于DOM操作的语言
+
+DOM的最小组成单位叫做**节点**，文档的树形结构就是由不同的节点组成，每个节点都是文档树的一片叶子
+
+节点有七种类型：
+
+|节点| 描述 |
+|--|--|
+|**Document** | 整个文档树的顶层节点 |
+|**DocumentType** | doctype标签 |
+|**Element** | 网页的各种HTML标签 |
+|**Attribute** | 网页元素的属性（如class=“abcd”） |
+|**Text** | 标签之间或标签包含的文本 |
+|**Comment** | 注释 |
+|**DocumentFragment** | 文档的片段 |
+
+**节点树：** 一个文档的所有节点按照所在的层级可以抽象成一种树状结构，这就是DOM树，它有一个顶层节点，下一层都是顶层节点的子节点，子节点也有自己的子节点，形成一个金字塔型结构，倒过来就像一棵树
+
+除了根节点，其他节点有三种层级关系：
+
+1. **父节点关系：** 直接的上级节点
+2. **子节点关系：** 直接的下级节点
+3. **同级节点关系：** 拥有同一个父节点的节点
+
+<br>
+
+**Node.nodeType属性**不同节点的nodeType属性值和对应的常量如下：
+
+| 节点 | 属性值 | 对应的常量 |
+|--|--|--|
+|**文档节点**  | 9 | Node。DOCUMENT_NODE |
+|**元素节点**  | 1 | Node.ELEMENT_NODE |
+|**属性节点**  | 2 | Node.ATTRIBUTE_NODE |
+|**文本节点**  | 3 | Node.TEXT_NODE |
+|**文档片段节点**  | 11 | Node.DOCUMENT_FRAGMENT_NODE |
+
+ * **
  * # 图解HTTP笔记
  * ## 第一章 了解Web及网络基础
 
