--- a/fuhuo987/陈俊翰.md.1.md
+++ b/fuhuo987/陈俊翰.md.1.md
@@ -1141,3 +1141,122 @@ document方法也可以创建元素
 
 ```appendChild()```方法可以将内容或子元素放到容器中
 * **
+* ## Element对象
+Element对象对应网页的HTML元素，每一个HTML元素在DOM树上都会转化成一个Element节点对象
+
+|属性|描述 |
+|--|--|
+| ```Element.id``` | 返回指定元素的```id```属性，可读写 |
+| ```Element.className``` | 读取当前元素的class属性，它的值是一个字符串，每一个```class```之间通过空格分隔，也可以修改 |
+| ```Element.classList``` | 有下列方法：<br>```add()```:增加一个class<br>```remove()```:移除一个class<br>```contains()```:检查当前元素是否包含某个class<br>```toggle()```将某个class移入或移出当前元素 |
+| ```Element.innerHTML``` | 返回一个字符串，等同于该元素包含的所有HTML代码，该属性可以读写，能改写所有元素节点的内容，包括```<HTML>```和```<body>```元素 |
+| ```Element.innerText``` | 与```Element.innerHTML```类似，不同的是它无法识别元素，会直接渲染成字符串 |
+
+Element还能获取元素在页面中的位置
+|属性| 描述 |
+|--|--|
+| ```clientHeight``` |获取元素高度包括```padding```部分但是不包括```border```和```margin```  |
+| ```clientWidth``` | 获取元素宽度包括```padding```部分但是不包括```border```和```margin``` |
+| ```scrollHeight``` | 元素总高度，包包括```padding```部分但是不包括```border```和```margin```包括溢出的不可见内容 |
+| ```scrollWidth``` |元素总宽度，包包括```padding```部分但是不包括```border```和```margin```包括溢出的不可见内容  |
+| ```scrollLeft``` | 元素的水平滚动条向右滚动的像素数量 |
+| ```scrollTop``` | 元素的水平滚动条向下滚动的像素数量 |
+| ```offsetHeight``` | 元素的CSS垂直高度（单位是像素），包括元素本身高度、```padding```和```border``` |
+| ```offsetWidth``` | 元素的CSS水平宽度（单位是像素），包括元素本身高度、```padding```和```border``` |
+| ```offsetLift``` | 到定位父级左边界的间距 |
+| ```offsetTop``` | 到定位父级上边界的间距   |
+
+* **
+* ## 通过JS来操作CSS
+操作CSS样式最简单的方法就是通过网页元素节点的```setAttribute```方法直接操作网页元素的```style```属性
+```box.setAttribute("style",style属性)```
+虽然简单但是不常用
+
+第二种方法是通过元素节点的```style```属性来进行操作
+```
+var a=document.querySelector('div').style;
+a.backgroundColor='red';
+```
+ <br>
+ 第三种方法是通过```cssText```属性进行操作
+ ```
+ var a=document.querySelector('div').style;
+ a.cssText='background-color:red;';
+ ```
+
+不过我自己用的还有先在css里创建一个类选择器，然后通过增加类名来使元素节点具有那个类选择器里的属性
+* **
+* ## 事件处理程序
+事件处理程序分为**HTML事件处理、DOM0级事件处理、DOM2级事件处理**
+
+**HTML事件处理：**
+```
+<button onClick="shijian()">按钮</button>
+
+<script>
+function shijian(){
+   要发生的事件代码
+}
+</script>
+```
+它的缺点就是HTML和JS没有分开
+
+**DOM0级事件处理：**
+```
+<button id="btn">按钮</button>
+
+<script>
+var btn=document.getElementById("btn");
+btn.onclick=function(){
+   要发生的事件代码
+}
+</script>
+```
+这里HTML和JS分离，但无法同时添加多个事件，如果有多个事件会覆盖前面的事件
+
+**DOM2级事件处理：**
+```
+<button id="btn">按钮</button>
+
+<script>
+var btn=document.getElementById("btn");
+btn.addEventListener("click",function(){
+要发生的事件代码
+})
+</script>
+```
+这里添加了事件监听器。使用```addEventListener```，它必须接受两个必须参数和一个可选参数。第一个参数是要监听的事件类型；第二个参数是当事件发生时要执行的函数；可选的第三个参数是一个布尔值
+
+|常用的可以监听的事件| 描述 |
+|--|--|
+|**mousedown**  | 按下鼠标左键或者右键触发 |
+|**mouseup**  | 松开鼠标左键或右键触发 |
+|**mouseenter**  | 鼠标指针进入该元素的边界时触发，进入子节点不会触发 |
+|**mouseleave**  | 鼠标指针离开该元素时触发，离开父节点不会触发 |
+|**mouseover**  | 鼠标指针进入一个节点时触发，进入子节点会再一次触发该事件 |
+|**mouseout**  | 鼠标指针离开一个节点时触发，离开父节点也会触发这个事件 |
+|**click**  | 鼠标指针点击元素松开鼠标左键时触发 |
+|**dbclick**  | 鼠标指针双击时触发 |
+|**wheel**  | 鼠标滚轮转动时触发 |
+|**keydown**  | 键盘的键按下时触发 |
+|**keyup**  | 键盘的键松开时触发 |
+|**submit**  | 当点击表单种的提交按钮时触发 |
+|**reset**  | 当点击表单的重置按钮时触发 |
+|**select**  | 检测用户在文本输入框中选择文本内容的操作 |
+
+* **
+* ## Event事件对象
+事件发生后会产生一个事件对象，作为参数传给监听函数
+
+Event事件对象可以分为**属性**和**方法**两部分去看
+
+Event对象属性：**Event.Target**、**Event.Type**
+
+**Event.Target**返回事件当前所在的节点
+**Event.Type**返回的字符串表明当前事件类型
+
+Event对象方法：**Event.preventDefault()**、**Event.stopPropagation()**
+
+**Event.preventDefault**方法取消浏览器对当前事件的默认行为，比如点击链接浏览器会默认跳转到另一个页面，使用该方法后就不会跳转了
+**Event.stopPropagation**方法阻止事件在DOM继续传播，防止再触发定义在别的节点上的监听函数，但是不包括在当前事件上其他事件监听函数（子元素和父元素嵌套的时候阻止事件冒泡）
+* **
