2/5 追加更新，看到事件代理部分把js的代码改了一下，虽然实现的效果一样，但是我觉得我更能理解了

--- a/fuhuo987/陈俊翰.md.1.md
+++ b/fuhuo987/陈俊翰.md.1.md
@@ -1126,7 +1126,7 @@ document方法可以获取元素
 | ```document.getElementsByTagName()``` | 搜索HTML标签名，返回符合条件的元素，返回值是一个类似数组对象（HTMLCollection）。如果没有任何匹配的元素，返回一个空集，如果传入```*```就返回文档中所有HTML元素 |
 |```document.getElementsByClassName()```|搜索所有class名字符合指定条件的元素，返回值是一个类似数组的对象（HTMLCollection）|
 |```document.getElementsByName()```|搜索所有name名字符合指定条件的元素，返回值是一个类似数组的对象（HTMLCollection）|
-|```document.getElementsByID()```|搜索所有ID名字符合指定条件的元素，返回值是一个类似数组的对象（HTMLCollection）|
+|```document.getElementById()```|搜索所有ID名字符合指定条件的元素|
 |```document.querySelector()```|该方法接受一个CSS选择器作为参数，如果有多个节点满足条件，返回第一个匹配的节点|
 |```document.querySelectorAll()```|和```document.querySelector()```用法类似，区别是返回一个```NodeList```对象，包含所有匹配给定选择器的节点|
 <br>
@@ -1259,4 +1259,8 @@ Event对象方法：**Event.preventDefault()**、**Event.stopPropagation()**
 
 **Event.preventDefault**方法取消浏览器对当前事件的默认行为，比如点击链接浏览器会默认跳转到另一个页面，使用该方法后就不会跳转了
 **Event.stopPropagation**方法阻止事件在DOM继续传播，防止再触发定义在别的节点上的监听函数，但是不包括在当前事件上其他事件监听函数（子元素和父元素嵌套的时候阻止事件冒泡）
+
+**事件代理：** 由于事件会在冒泡阶段向上传播到父节点，因此可以把子节点的监听函数定义在父节点上，由父节点的监听函数统一处理多个子元素的事件，这种方法就叫做事件代理
+
+
 * **
