--- a/fuhuo987/代码部分.md
+++ b/fuhuo987/代码部分.md
@@ -16,6 +16,7 @@
 <meta charset="UTF-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>fuhuo</title>
 
 <link rel="stylesheet" href="./css/style.css">
@@ -24,6 +25,8 @@
 
 <style>
 
+  
+
 </style>
 
 </head>
@@ -31,8 +34,6 @@
   
 
 <body>
-
-<script src="./js/1.js"></script>
 
 <img src="2.png" alt="偶像大师闪耀色彩标题" id="tphoto">
 
@@ -110,9 +111,9 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 </div>
 
-<div><button class="qk" onmouseover="qingkong()">清空选择</button></div>
+<div><button class="qk">清空选择</button></div>
 
-<div>
+<div class="biaoge">
 
 <table class="colors">
 
@@ -124,13 +125,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 </tr>
 
-<tr >
+<tr>
 
 <th>
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="mano" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="mano" ></div>
 
 </div>
 
@@ -140,7 +141,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="jiaozi" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="jiaozi" ></div>
 
 </div>
 
@@ -150,7 +151,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="mgr" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="mgr" ></div>
 
 </div>
 
@@ -158,7 +159,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="kgn" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="kgn" ></div>
 
 </div>
 
@@ -166,7 +167,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="mmm" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="mmm" ></div>
 
 </div>
 
@@ -174,7 +175,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="sky" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="sky" ></div>
 
 </div>
 
@@ -182,7 +183,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="fff" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="fff" ></div>
 
 </div>
 
@@ -190,7 +191,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="krk" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="krk" ></div>
 
 </div>
 
@@ -212,7 +213,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="kaho" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="kaho" ></div>
 
 </div>
 
@@ -222,7 +223,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="cyk" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="cyk" ></div>
 
 </div>
 
@@ -232,7 +233,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="juri" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="juri" ></div>
 
 </div>
 
@@ -242,7 +243,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="rinze" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="rinze" ></div>
 
 </div>
 
@@ -252,7 +253,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="nth" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="nth" ></div>
 
 </div>
 
@@ -262,7 +263,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="amn" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="amn" ></div>
 
 </div>
 
@@ -272,7 +273,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="tenka" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="tenka" ></div>
 
 </div>
 
@@ -282,7 +283,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="chyk" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="chyk" ></div>
 
 </div>
 
@@ -292,7 +293,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 </table>
 
-<table>
+<table >
 
 <tr>
 
@@ -308,7 +309,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="ash" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="ash" ></div>
 
 </div>
 
@@ -318,7 +319,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="fyk" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="fyk" ></div>
 
 </div>
 
@@ -328,7 +329,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="mei" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="mei" ></div>
 
 </div>
 
@@ -338,7 +339,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="toru" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="toru" ></div>
 
 </div>
 
@@ -348,7 +349,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="mdk" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="mdk" ></div>
 
 </div>
 
@@ -358,7 +359,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="koito" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="koito" ></div>
 
 </div>
 
@@ -368,7 +369,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="hnn" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="hnn" ></div>
 
 </div>
 
@@ -380,7 +381,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 </table>
 
-<table>
+<table >
 
 <tr>
 
@@ -396,7 +397,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="nck" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="nck" ></div>
 
 </div>
 
@@ -406,7 +407,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="mkd" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="mkd" ></div>
 
 </div>
 
@@ -416,7 +417,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="luka" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="luka" ></div>
 
 </div>
 
@@ -426,7 +427,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="hana" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="hana" ></div>
 
 </div>
 
@@ -436,7 +437,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="hrk" onmouseover="xuanzhong()"></div>
+<div class="checkbox-container" id="hrk" ></div>
 
 </div>
 
@@ -448,9 +449,11 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 </div>
 
+<footer class="foot"></footer>
+
 </div>
 
-  
+<script src="./js/1.js"></script>
 
 </body>
 
@@ -686,8 +689,6 @@ width: 1000px;
 z-index: 0;
 
 background: rgba(236, 235, 233, 0.9);
-
-padding-bottom: 100px;
 
 }
 
@@ -931,7 +932,7 @@ table-layout:auto;
 
 .xz1{
 
-box-shadow:5px 8px 20px black ;
+box-shadow:8px 5px 30px black ;
 
 }
 
@@ -984,6 +985,20 @@ height: 80px;
 th{
 
 height: 100px;
+
+}
+
+.foot{
+
+height: 100px;
+
+display: flex;
+
+align-items: center;
+
+justify-content: center;
+
+margin-top: 100px;
 
 }
 ```
@@ -1186,79 +1201,58 @@ alert("晚上要不要去看星星呢~");
 
   
   
+
+var bg = document.querySelector('.biaoge')
+
+bg.addEventListener("mouseover",function(event){
+
+if(event.target.className ==="checkbox-container"){
+
+document.querySelectorAll('.xz').forEach(function(a){a.classList.remove('xz');})
+
+event.target.classList.add('xz');
+
+}else{document.querySelectorAll('.xz').forEach(function(a){a.classList.remove('xz');})}
+
+})
+
   
-  
-  
 
-function xuanzhong(){
+bg.addEventListener("click",function(event){
 
-document.querySelectorAll('.checkbox-container').forEach(function(box) {
+if(event.target.className ==="checkbox-container xz"){
 
-box.addEventListener("click", function() {
+document.querySelectorAll('.xz1').forEach(function(a){a.classList.remove('xz1');});
 
-document.querySelectorAll('.checkbox-container.xz1').forEach(function(selectedBox) {
-
-selectedBox.classList.remove('xz1');
-
-});
-
-box.classList.add('xz1');
-
-});
-
-document.querySelectorAll('.checkbox-container').forEach(function(box) {
-
-box.addEventListener("mouseover", function() {
-
-document.querySelectorAll('.checkbox-container.xz').forEach(function(selectedBox) {
-
-selectedBox.classList.remove('xz');
-
-});
-
-box.classList.add('xz');
-
-});
-
-box.addEventListener("mouseleave", function() {
-
-document.querySelectorAll('.xz').forEach(function(selectedBox) {
-
-selectedBox.classList.remove('xz');
-
-});
-
-});
+event.target.classList.add('xz1');
 
 }
 
-)})}
+})
 
   
 
-function qingkong(){
+var qkbtn=document.querySelector('.qk')
 
-var box=document.querySelector('.qk');
-
-box.addEventListener("mousedown",function(){
+qkbtn.addEventListener('mousedown',function(){
 
 document.querySelector('.qk').style.color="black";
 
 document.querySelectorAll('.xz1').forEach(function(selectedBox) {
 
-selectedBox.classList.remove('xz1');
+selectedBox.classList.remove('xz1');})
 
-});
+document.querySelectorAll('.xz').forEach(function(selectedBox) {
+
+selectedBox.classList.remove('xz');})
 
 })
 
-box.addEventListener("mouseup",function(){
+qkbtn.addEventListener('mouseup',function(){
 
 document.querySelector('.qk').style.color="white";
 
 })
-
-}
 ```
 * **
 ## 图片部分
